# telegrambot

./: .gitignore  README.md  SKILL.md  STATE.md  main.py  migrations.sql  prompt.txt  pyproject.toml  requirements.txt  vercel.json
api/: webhook.py
src/nutribot/: __init__.py  config.py
src/nutribot/api/: webhook.py
src/nutribot/bot/: formatters.py  handlers.py  keyboards.py  states.py
src/nutribot/domain/: calculator.py  models.py  rollover.py
src/nutribot/storage/: repository.py
tests/bot/: test_calendar.py  test_formatters.py  test_logging_flow.py  test_onboarding_and_edit.py
tests/domain/: test_calculator.py  test_rollover.py
