[project]
name = "nutribot"
version = "0.1.0"
description = "Telegram BJU nutrition tracking bot"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "pytelegrambotapi>=4.35.0",
    "supabase>=2.31.0",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "supabase",
    "supabase.*",
    "postgrest",
    "postgrest.*",
    "realtime.*",
    "storage3.*",
    "supabase_auth.*",
    "supabase_functions.*",
    "telebot",
    "telebot.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nutribot.storage.repository",
    "nutribot.bot.keyboards",
    "nutribot.bot.handlers",
    "nutribot.api.webhook",
]
disable_error_code = ["no-untyped-call", "union-attr", "index", "arg-type", "call-overload", "untyped-decorator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutribot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: async test",
]
